--- a/README
+++ b/README
@@ -6,3 +6,5 @@ so that all the XApp-le contributors can help keep it up-to-date in one
 single place at any time.  For more information about how to build the 
 source code and create the OS images, please refer to the XApp-le Wiki
 at http://wiki.linux-xapple.org/.
+
+Schematic file of S500 reference board: Bubblegum or Roseapple Pi is public by the webpage. (http://roseapplepi.org/index.php/resources/download/)
